--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "firebase": "^7.22.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-toastify": "^6.0.9"
+    "react-stepper-horizontal": "^1.0.11",
+    "react-toastify": "^6.0.9",
+    "react-tooltip": "^4.2.10"
   },
   "scripts": {
     "start": "react-scripts start",
